# travel-assistant

./: .env  Cargo.toml  WORKING.py  choosing_gpt.py  geopy_test.py  google_street_service.py  places.json  pre_scraper.py  preprocess.py  prompts_scraping.json  scraper_functions.py
src/: app.rs  app_error.rs  calendar_agent.rs  config.rs  context.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/calendar/: mod.rs
